perf Time Mem Symbols

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
       }
     </style>
     <div id="root"></div>
-    <script type="module" src="/out/work.js"></script>
+    <script type="module" src="/out/symbol_it.js"></script>
   </body>
 </html>
