--- a/index.html
+++ b/index.html
@@ -7,11 +7,41 @@
   </head>
   <body>
     <style>
+      html {
+        display: flex;
+        place-items: center;
+        height: 100%;
+      }
       body {
         background-color: #212121;
+        color: #e8e8e8;
+        display: flex;
+        place-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+      }
+      h1 {
+        font-size: xx-large;
+        min-height: 37px;
+      }
+      input {
+        padding: 10px 20px;
+        border-radius: 5px;
+        box-shadow: 0 0 5px 0 #000000;
+      }
+      button {
+        width: fit-content;
+        padding: 10px 20px;
+        border-radius: 5px;
+        box-shadow: 0 0 5px 0 #000000;
       }
     </style>
-    <div id="root"></div>
-    <script type="module" src="/out/symbol_it.js"></script>
+    <div id="root">
+      <h1></h1>
+      <input type="text" /> <button type="submit">Versionage</button>
+    </div>
+    <script type="module" src="/out/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
   </body>
 </html>
